# fluid-sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conservation.csv  imgui.ini  perf.csv  volume.csv
assets/shaders/: lines.frag  lines.vert  voxels.vert
demo/: App.cpp  App.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  FluidRenderer2D.cpp  FluidRenderer2D.h  Image.cpp  Shader.h  Transform.h  WaterRenderer3D.cpp  WaterRenderer3D.h
include/: Array2D.h  Array3D.h  FluidSim2D.h  FluidSim3D.h  MACGrid2D.h  MACGrid3D.h  PerformanceCounter.h
paper/: mac_grid.odg  paper.tex
paper/data/: analysis.ipynb  conservation-pic-alpha100-state1.csv  conservation-pic-alpha50-state1.csv  conservation-pic-alpha60-state1.csv  conservation-pic-alpha70-state1.csv  conservation-pic-alpha80-state1.csv  conservation-pic-alpha90-state1.csv  conservation-semilag-state1.csv  perf-pic-state0.csv  perf-pic-state1.csv  perf-pic0-state2.csv  perf-semilagrangian-state0.csv  perf-semilagrangian-state1.csv  perf-semilagrangian-state2.csv
paper/data/.ipynb_checkpoints/: analysis-checkpoint.ipynb
paper/images/: crop.sh
src/: App.cpp  App.h  Array2D.h  Array3D.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  CubicInterpMat.cpp  FirstPersonCamera.cpp  FirstPersonCamera.h  FluidRenderer2D.cpp  FluidRenderer2D.h  FluidSim2D.cpp  FluidSim2D.h  FluidSim3D.cpp  FluidSim3D.h  FluidSimSettings.h  Image.h  InputManager.cpp  InputManager.h  MACGrid2D.h  MACGrid3D.h  PerformanceCounter.cpp  PerformanceCounter.h  Shader.cpp  Shader.h  Transform.h  Utils.cpp  Utils.h  WaterRenderer.cpp  WaterRenderer.h  WaterRenderer2D.cpp  WaterRenderer2D.h  WaterRenderer3D.cpp  WaterRenderer3D.h  WaterSim.cpp  WaterSim.h  WaterSim2D.cpp  WaterSim2D.h  WaterSim3D.cpp  (+3 more)
